@@ -1,6 +1,11 @@
 Please see NEWS for a summary of changes since the last release suitable
 for announcements.
 
+* Wed Sep 5 2012 Thunor <thunorsif@hotmail.com>
+- Updated examples/table/table.
+- Moved the table widget's selected-row check to after signal connection
+  as it wasn't firing on initial refresh.
+
 * Tue Sep 4 2012 Thunor <thunorsif@hotmail.com>
 - Added support for column sorting to the table widget.
 - Added the "column-header-active" and "column-visible" tag attributes
